--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,8 +15,9 @@ django-extensions = "^3.1.3"
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
 flake8 = "^3.9.2"
-pytest-flake8 = "^1.0.7"
 pytest-cov = "^2.12.0"
+pytest-django = "^4.3.0"
+pytest-flake8 = "^1.0.7"
 pytest-pythonpath = "^0.7.3"
 ipdb = "^0.13.7"
 
