--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,6 +2,7 @@
 flake8==3.9.2
 ipdb==0.13.7
 pytest-cov==2.12.0
+pytest-django==4.3.0
 pytest-flake8==1.0.7
 pytest-pythonpath==0.7.3
 pytest==6.2.4
