--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ django-extensions = "^3.1.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.4"
+factory-boy = "^3.2.0"
+Faker = "^8.1.4"
 flake8 = "^3.9.2"
 pytest-cov = "^2.12.0"
 pytest-django = "^4.3.0"
