--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,6 +1,8 @@
 -r requirements.txt
 flake8==3.9.2
 ipdb==0.13.7
+factory-boy==3.2.0
+Faker==8.1.4
 pytest-cov==2.12.0
 pytest-django==4.3.0
 pytest-flake8==1.0.7
